# costdrill

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
costdrill/: __init__.py  cli.py
costdrill/core/: __init__.py  aws_client.py  cached_cost_explorer.py  cached_ec2_aggregator.py  cost_explorer.py  ec2_cost_aggregator.py  ec2_cost_analyzer.py  ec2_models.py  ec2_service.py  exceptions.py  models.py  parsers.py
costdrill/exporters/: __init__.py  report_generator.py
costdrill/tui/: __init__.py  app.py  ec2_screen.py
costdrill/utils/: cache.py  formatters.py
docs/: cost_explorer_integration.md  ec2_service_guide.md
examples/: README.md  basic_usage.py  ec2_cost_analysis.py
tests/: __init__.py  test_cache.py  test_ec2_models.py  test_formatters.py  test_models.py  test_parsers.py
