[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costdrill"
version = "0.1.0"
description = "Interactive CLI tool for AWS cost exploration with drill-down visibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Manuel Rodriguez"}
]
keywords = ["aws", "cloud", "costs", "cli", "tui", "finops", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "boto3>=1.34.0",
    "textual>=0.47.0",
    "rich>=13.7.0",
    "pandas>=2.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "sphinx>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/mrodr359/costdrill"
Repository = "https://github.com/mrodr359/costdrill"
"Bug Tracker" = "https://github.com/mrodr359/costdrill/issues"

[project.scripts]
costdrill = "costdrill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["costdrill*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=costdrill --cov-report=term-missing --cov-report=html"
